exports[`ethereum transaction acceleration integration tests ethereum can resolve address for all purposes 1`] = `
[]
`;

exports[`ethereum transaction acceleration integration tests ethereum correctly encodes private key 1`] = `
[]
`;

exports[`ethereum transaction acceleration integration tests walletTesterTest_ensureMinimumBump 1`] = `
[
  {
    "data": "",
    "gasLimit": 21000,
    "gasPrice": undefined,
    "maxFeePerGas": 500500000000,
    "maxPriorityFeePerGas": 0,
    "nonce": 947,
    "to": "0x000000000000000000000000000000000000dead",
    "transactionBuffer": "02f1018203b3808574881fed0082520894000000000000000000000000000000000000dead880de0b6b3a764000080c0808080",
    "value": "1000000000000000000",
  },
  {
    "data": "",
    "gasLimit": 21000,
    "gasPrice": undefined,
    "maxFeePerGas": 69500000000,
    "maxPriorityFeePerGas": 500000000,
    "nonce": 947,
    "to": "0x000000000000000000000000000000000000dead",
    "transactionBuffer": "02f5018203b3841dcd650085102e85d70082520894000000000000000000000000000000000000dead880de0b6b3a764000080c0808080",
    "value": "1000000000000000000",
  },
  {
    "data": "",
    "gasLimit": 21000,
    "gasPrice": undefined,
    "maxFeePerGas": 600600000000,
    "maxPriorityFeePerGas": 531600000000,
    "nonce": 947,
    "to": "0x000000000000000000000000000000000000dead",
    "transactionBuffer": "02f6018203b3857bc5d44400858bd68cb60082520894000000000000000000000000000000000000dead880de0b6b3a764000080c0808080",
    "value": "1000000000000000000",
  },
]
`;

exports[`ethereum transaction acceleration integration tests walletTesterTest_gasPriceFalls 1`] = `
[
  {
    "data": "",
    "gasLimit": 21000,
    "gasPrice": undefined,
    "maxFeePerGas": 100500000000,
    "maxPriorityFeePerGas": 500000000,
    "nonce": 943,
    "to": "0x000000000000000000000000000000000000dead",
    "transactionBuffer": "02f5018203af841dcd6500851766444d0082520894000000000000000000000000000000000000dead880de0b6b3a764000080c0808080",
    "value": "1000000000000000000",
  },
  {
    "data": "",
    "gasLimit": 21000,
    "gasPrice": undefined,
    "maxFeePerGas": 100600000000,
    "maxPriorityFeePerGas": 600000000,
    "nonce": 943,
    "to": "0x000000000000000000000000000000000000dead",
    "transactionBuffer": "02f5018203af8423c3460085176c3a2e0082520894000000000000000000000000000000000000dead880de0b6b3a764000080c0808080",
    "value": "1000000000000000000",
  },
]
`;

exports[`ethereum transaction acceleration integration tests walletTesterTest_gasPriceRises 1`] = `
[
  {
    "data": "",
    "gasLimit": 21000,
    "gasPrice": undefined,
    "maxFeePerGas": 100500000000,
    "maxPriorityFeePerGas": 500000000,
    "nonce": 942,
    "to": "0x000000000000000000000000000000000000dead",
    "transactionBuffer": "02f5018203ae841dcd6500851766444d0082520894000000000000000000000000000000000000dead880de0b6b3a764000080c0808080",
    "value": "1000000000000000000",
  },
  {
    "data": "",
    "gasLimit": 21000,
    "gasPrice": undefined,
    "maxFeePerGas": 200100000000,
    "maxPriorityFeePerGas": 100100000000,
    "nonce": 942,
    "to": "0x000000000000000000000000000000000000dead",
    "transactionBuffer": "02f6018203ae85174e6cc900852e96e3b10082520894000000000000000000000000000000000000dead880de0b6b3a764000080c0808080",
    "value": "1000000000000000000",
  },
]
`;

exports[`ethereum transaction acceleration integration tests walletTesterTest_iterativeEthLikeTokenTransactionAcceleration 1`] = `
[
  {
    "data": "a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000",
    "gasLimit": 44207,
    "gasPrice": undefined,
    "maxFeePerGas": 600000000,
    "maxPriorityFeePerGas": 500000000,
    "nonce": 946,
    "to": "0x4d224452801aced8b2f0aebe155379bb5d594381",
    "transactionBuffer": "02f871018203b2841dcd65008423c3460082acaf944d224452801aced8b2f0aebe155379bb5d59438180b844a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000c0808080",
    "value": "0",
  },
  {
    "data": "a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000",
    "gasLimit": 44207,
    "gasPrice": undefined,
    "maxFeePerGas": 700000000,
    "maxPriorityFeePerGas": 600000000,
    "nonce": 946,
    "to": "0x4d224452801aced8b2f0aebe155379bb5d594381",
    "transactionBuffer": "02f871018203b28423c346008429b9270082acaf944d224452801aced8b2f0aebe155379bb5d59438180b844a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000c0808080",
    "value": "0",
  },
  {
    "data": "a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000",
    "gasLimit": 44207,
    "gasPrice": undefined,
    "maxFeePerGas": 820000000,
    "maxPriorityFeePerGas": 720000000,
    "nonce": 946,
    "to": "0x4d224452801aced8b2f0aebe155379bb5d594381",
    "transactionBuffer": "02f871018203b2842aea54008430e0350082acaf944d224452801aced8b2f0aebe155379bb5d59438180b844a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000c0808080",
    "value": "0",
  },
  {
    "data": "a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000",
    "gasLimit": 44207,
    "gasPrice": undefined,
    "maxFeePerGas": 964000000,
    "maxPriorityFeePerGas": 864000000,
    "nonce": 946,
    "to": "0x4d224452801aced8b2f0aebe155379bb5d594381",
    "transactionBuffer": "02f871018203b284337f9800843975790082acaf944d224452801aced8b2f0aebe155379bb5d59438180b844a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000c0808080",
    "value": "0",
  },
  {
    "data": "a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000",
    "gasLimit": 44207,
    "gasPrice": undefined,
    "maxFeePerGas": 1136800000,
    "maxPriorityFeePerGas": 1036800000,
    "nonce": 946,
    "to": "0x4d224452801aced8b2f0aebe155379bb5d594381",
    "transactionBuffer": "02f871018203b2843dcc50008443c2310082acaf944d224452801aced8b2f0aebe155379bb5d59438180b844a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000c0808080",
    "value": "0",
  },
  {
    "data": "a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000",
    "gasLimit": 44207,
    "gasPrice": undefined,
    "maxFeePerGas": 1344160000,
    "maxPriorityFeePerGas": 1244160000,
    "nonce": 946,
    "to": "0x4d224452801aced8b2f0aebe155379bb5d594381",
    "transactionBuffer": "02f871018203b2844a28600084501e410082acaf944d224452801aced8b2f0aebe155379bb5d59438180b844a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000c0808080",
    "value": "0",
  },
  {
    "data": "a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000",
    "gasLimit": 44207,
    "gasPrice": undefined,
    "maxFeePerGas": 1592992000,
    "maxPriorityFeePerGas": 1492992000,
    "nonce": 946,
    "to": "0x4d224452801aced8b2f0aebe155379bb5d594381",
    "transactionBuffer": "02f871018203b28458fd4000845ef3210082acaf944d224452801aced8b2f0aebe155379bb5d59438180b844a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000c0808080",
    "value": "0",
  },
  {
    "data": "a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000",
    "gasLimit": 44207,
    "gasPrice": undefined,
    "maxFeePerGas": 1891590400,
    "maxPriorityFeePerGas": 1791590400,
    "nonce": 946,
    "to": "0x4d224452801aced8b2f0aebe155379bb5d594381",
    "transactionBuffer": "02f871018203b2846ac980008470bf610082acaf944d224452801aced8b2f0aebe155379bb5d59438180b844a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000c0808080",
    "value": "0",
  },
  {
    "data": "a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000",
    "gasLimit": 44207,
    "gasPrice": undefined,
    "maxFeePerGas": 2249908480,
    "maxPriorityFeePerGas": 2149908480,
    "nonce": 946,
    "to": "0x4d224452801aced8b2f0aebe155379bb5d594381",
    "transactionBuffer": "02f871018203b2848025000084861ae10082acaf944d224452801aced8b2f0aebe155379bb5d59438180b844a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000c0808080",
    "value": "0",
  },
  {
    "data": "a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000",
    "gasLimit": 44207,
    "gasPrice": undefined,
    "maxFeePerGas": 2679890176,
    "maxPriorityFeePerGas": 2579890176,
    "nonce": 946,
    "to": "0x4d224452801aced8b2f0aebe155379bb5d594381",
    "transactionBuffer": "02f871018203b28499c60000849fbbe10082acaf944d224452801aced8b2f0aebe155379bb5d59438180b844a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000c0808080",
    "value": "0",
  },
]
`;

exports[`ethereum transaction acceleration integration tests walletTesterTest_iterativeTransactionAcceleration 1`] = `
[
  {
    "data": "",
    "gasLimit": 21000,
    "gasPrice": undefined,
    "maxFeePerGas": 50500000000,
    "maxPriorityFeePerGas": 500000000,
    "nonce": 941,
    "to": "0x000000000000000000000000000000000000dead",
    "transactionBuffer": "02f5018203ad841dcd6500850bc208d90082520894000000000000000000000000000000000000dead880de0b6b3a764000080c0808080",
    "value": "1000000000000000000",
  },
  {
    "data": "",
    "gasLimit": 21000,
    "gasPrice": undefined,
    "maxFeePerGas": 50600000000,
    "maxPriorityFeePerGas": 600000000,
    "nonce": 941,
    "to": "0x000000000000000000000000000000000000dead",
    "transactionBuffer": "02f5018203ad8423c34600850bc7feba0082520894000000000000000000000000000000000000dead880de0b6b3a764000080c0808080",
    "value": "1000000000000000000",
  },
  {
    "data": "",
    "gasLimit": 21000,
    "gasPrice": undefined,
    "maxFeePerGas": 50720000000,
    "maxPriorityFeePerGas": 720000000,
    "nonce": 941,
    "to": "0x000000000000000000000000000000000000dead",
    "transactionBuffer": "02f5018203ad842aea5400850bcf25c80082520894000000000000000000000000000000000000dead880de0b6b3a764000080c0808080",
    "value": "1000000000000000000",
  },
  {
    "data": "",
    "gasLimit": 21000,
    "gasPrice": undefined,
    "maxFeePerGas": 50864000000,
    "maxPriorityFeePerGas": 864000000,
    "nonce": 941,
    "to": "0x000000000000000000000000000000000000dead",
    "transactionBuffer": "02f5018203ad84337f9800850bd7bb0c0082520894000000000000000000000000000000000000dead880de0b6b3a764000080c0808080",
    "value": "1000000000000000000",
  },
  {
    "data": "",
    "gasLimit": 21000,
    "gasPrice": undefined,
    "maxFeePerGas": 51036800000,
    "maxPriorityFeePerGas": 1036800000,
    "nonce": 941,
    "to": "0x000000000000000000000000000000000000dead",
    "transactionBuffer": "02f5018203ad843dcc5000850be207c40082520894000000000000000000000000000000000000dead880de0b6b3a764000080c0808080",
    "value": "1000000000000000000",
  },
  {
    "data": "",
    "gasLimit": 21000,
    "gasPrice": undefined,
    "maxFeePerGas": 51244160000,
    "maxPriorityFeePerGas": 1244160000,
    "nonce": 941,
    "to": "0x000000000000000000000000000000000000dead",
    "transactionBuffer": "02f5018203ad844a286000850bee63d40082520894000000000000000000000000000000000000dead880de0b6b3a764000080c0808080",
    "value": "1000000000000000000",
  },
  {
    "data": "",
    "gasLimit": 21000,
    "gasPrice": undefined,
    "maxFeePerGas": 51492992000,
    "maxPriorityFeePerGas": 1492992000,
    "nonce": 941,
    "to": "0x000000000000000000000000000000000000dead",
    "transactionBuffer": "02f5018203ad8458fd4000850bfd38b40082520894000000000000000000000000000000000000dead880de0b6b3a764000080c0808080",
    "value": "1000000000000000000",
  },
  {
    "data": "",
    "gasLimit": 21000,
    "gasPrice": undefined,
    "maxFeePerGas": 51791590400,
    "maxPriorityFeePerGas": 1791590400,
    "nonce": 941,
    "to": "0x000000000000000000000000000000000000dead",
    "transactionBuffer": "02f5018203ad846ac98000850c0f04f40082520894000000000000000000000000000000000000dead880de0b6b3a764000080c0808080",
    "value": "1000000000000000000",
  },
  {
    "data": "",
    "gasLimit": 21000,
    "gasPrice": undefined,
    "maxFeePerGas": 52149908480,
    "maxPriorityFeePerGas": 2149908480,
    "nonce": 941,
    "to": "0x000000000000000000000000000000000000dead",
    "transactionBuffer": "02f5018203ad8480250000850c2460740082520894000000000000000000000000000000000000dead880de0b6b3a764000080c0808080",
    "value": "1000000000000000000",
  },
  {
    "data": "",
    "gasLimit": 21000,
    "gasPrice": undefined,
    "maxFeePerGas": 52579890176,
    "maxPriorityFeePerGas": 2579890176,
    "nonce": 941,
    "to": "0x000000000000000000000000000000000000dead",
    "transactionBuffer": "02f5018203ad8499c60000850c3e01740082520894000000000000000000000000000000000000dead880de0b6b3a764000080c0808080",
    "value": "1000000000000000000",
  },
]
`;

exports[`ethereum transaction acceleration integration tests walletTesterTest_transferEthLikeToken 1`] = `
[
  {
    "data": "a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000",
    "gasLimit": 44207,
    "gasPrice": undefined,
    "maxFeePerGas": 50500000000,
    "maxPriorityFeePerGas": 500000000,
    "nonce": 944,
    "to": "0x4d224452801aced8b2f0aebe155379bb5d594381",
    "transactionBuffer": "02f872018203b0841dcd6500850bc208d90082acaf944d224452801aced8b2f0aebe155379bb5d59438180b844a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000c0808080",
    "value": "0",
  },
]
`;

exports[`ethereum transaction acceleration integration tests walletTesterTest_transferEthLikeTokenAcceleration 1`] = `
[
  {
    "data": "a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000",
    "gasLimit": 44207,
    "gasPrice": undefined,
    "maxFeePerGas": 10500000000,
    "maxPriorityFeePerGas": 500000000,
    "nonce": 945,
    "to": "0x4d224452801aced8b2f0aebe155379bb5d594381",
    "transactionBuffer": "02f872018203b1841dcd6500850271d9490082acaf944d224452801aced8b2f0aebe155379bb5d59438180b844a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000c0808080",
    "value": "0",
  },
  {
    "data": "a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000",
    "gasLimit": 44207,
    "gasPrice": undefined,
    "maxFeePerGas": 100100000000,
    "maxPriorityFeePerGas": 90100000000,
    "nonce": 945,
    "to": "0x4d224452801aced8b2f0aebe155379bb5d594381",
    "transactionBuffer": "02f873018203b18514fa60e50085174e6cc90082acaf944d224452801aced8b2f0aebe155379bb5d59438180b844a9059cbb000000000000000000000000000000000000000000000000000000000000dead0000000000000000000000000000000000000000000000000de0b6b3a7640000c0808080",
    "value": "0",
  },
]
`;
